--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.3",
+    "crypto-js": "^4.2.0",
     "firebase": "^10.12.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.1",
