--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@types/crypto-js": "^4.2.2",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.3",
     "crypto-js": "^4.2.0",
     "firebase": "^10.12.3",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.12.1",
+    "sweetalert2": "^11.12.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
